istio-teaching/virtualservice/tls/nginx-deploy-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-v2
spec:
  selector:
    matchLabels:
      run: my-nginx
      version: v2
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx
        version: v2
    spec:
      containers:
      - name: my-nginx
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx
          readOnly: true
        - name: nginx-server-certs
          mountPath: /etc/nginx-server-certs
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-configmap
      - name: nginx-server-certs
        secret:
          secretName: nginx-server-certs
