istio-teaching/virtualservice/tls/dr-my-nginx.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: my-nginx
spec:
  host: my-nginx
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      run: my-nginx
