istio-teaching/virtualservice/tls/vs-nginx-sniHosts.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx
spec:
  hosts:
  - nginx.example.com
  - bookinfo.example
  gateways:
  - bookinfo-gateway
  tls:
  - match:
    - sniHosts:
      - nginx.example.com
      - bookinfo.example
    route:
    - destination:
        host: my-nginx
        port:
          number: 443
