istio-teaching/virtualservice/tls/vs-nginx-sourceLabels.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-nginx
spec:
  hosts:
  - my-nginx
  tls:
  - match:
#    - port: 443
    - sniHosts:
      - my-nginx
      sourceLabels:
        app: sleep
    route:
    - destination:
        host: my-nginx
        port:
          number: 443
        subset: v2
