istio-teaching/virtualservice/tls/vs-nginx-sourceNamespace.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-nginx
spec:
  hosts:
  - my-nginx
  tls:
  - match:
    - port: 443
      sniHosts:
      - my-nginx
      sourceNamespace: istio
    route:
    - destination:
        host: my-nginx
        port:
          number: 443
        subset: v1
